python2Parser.py
# Generated from python2.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class python2Parser ( Parser ):

    grammarFileName = "python2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"','", u"'if'", u"'else'", u"'='", u"'['", 
                     u"']'", u"'-'", u"'!'", u"'>'", u"'<'", u"'>='", u"'<='", 
                     u"'*'", u"'+'", u"'=='", u"'def'", u"'return'", u"'\t'", 
                     u"':'", u"'('", u"')'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"DEF", u"RETURN", u"INDENT", u"COLON", u"OPEN_PR", 
                      u"CLOSE_PR", u"ID", u"NAME", u"NUMBER", u"WS", u"COMMENT" ]

    RULE_top = 0
    RULE_funcdef = 1
    RULE_params = 2
    RULE_funccall = 3
    RULE_body = 4
    RULE_expand_body = 5
    RULE_vardec = 6
    RULE_expr = 7
    RULE_exprList = 8

    ruleNames =  [ u"top", u"funcdef", u"params", u"funccall", u"body", 
                   u"expand_body", u"vardec", u"expr", u"exprList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    DEF=16
    RETURN=17
    INDENT=18
    COLON=19
    OPEN_PR=20
    CLOSE_PR=21
    ID=22
    NAME=23
    NUMBER=24
    WS=25
    COMMENT=26

    def __init__(self, input):
        super(python2Parser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.TopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(python2Parser.EOF, 0)

        def funcdef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.FuncdefContext)
            else:
                return self.getTypedRuleContext(python2Parser.FuncdefContext,i)


        def vardec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.VardecContext)
            else:
                return self.getTypedRuleContext(python2Parser.VardecContext,i)


        def funccall(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.FunccallContext)
            else:
                return self.getTypedRuleContext(python2Parser.FunccallContext,i)


        def getRuleIndex(self):
            return python2Parser.RULE_top

        def enterRule(self, listener):
            if hasattr(listener, "enterTop"):
                listener.enterTop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTop"):
                listener.exitTop(self)




    def top(self):

        localctx = python2Parser.TopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 21
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 18
                    self.funcdef()
                    pass

                elif la_ == 2:
                    self.state = 19
                    self.vardec()
                    pass

                elif la_ == 3:
                    self.state = 20
                    self.funccall()
                    pass


                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==python2Parser.DEF or _la==python2Parser.ID):
                    break

            self.state = 25
            self.match(python2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.FuncdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(python2Parser.DEF, 0)

        def ID(self):
            return self.getToken(python2Parser.ID, 0)

        def OPEN_PR(self):
            return self.getToken(python2Parser.OPEN_PR, 0)

        def CLOSE_PR(self):
            return self.getToken(python2Parser.CLOSE_PR, 0)

        def COLON(self):
            return self.getToken(python2Parser.COLON, 0)

        def body(self):
            return self.getTypedRuleContext(python2Parser.BodyContext,0)


        def params(self):
            return self.getTypedRuleContext(python2Parser.ParamsContext,0)


        def getRuleIndex(self):
            return python2Parser.RULE_funcdef

        def enterRule(self, listener):
            if hasattr(listener, "enterFuncdef"):
                listener.enterFuncdef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFuncdef"):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = python2Parser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(python2Parser.DEF)
            self.state = 28
            self.match(python2Parser.ID)
            self.state = 29
            self.match(python2Parser.OPEN_PR)
            self.state = 31
            _la = self._input.LA(1)
            if _la==python2Parser.ID:
                self.state = 30
                self.params()


            self.state = 33
            self.match(python2Parser.CLOSE_PR)
            self.state = 34
            self.match(python2Parser.COLON)
            self.state = 35
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.ParamsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(python2Parser.ID)
            else:
                return self.getToken(python2Parser.ID, i)

        def getRuleIndex(self):
            return python2Parser.RULE_params

        def enterRule(self, listener):
            if hasattr(listener, "enterParams"):
                listener.enterParams(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParams"):
                listener.exitParams(self)




    def params(self):

        localctx = python2Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(python2Parser.ID)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==python2Parser.T__0:
                self.state = 38
                self.match(python2Parser.T__0)
                self.state = 39
                self.match(python2Parser.ID)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunccallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.FunccallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(python2Parser.ID, 0)

        def OPEN_PR(self):
            return self.getToken(python2Parser.OPEN_PR, 0)

        def CLOSE_PR(self):
            return self.getToken(python2Parser.CLOSE_PR, 0)

        def exprList(self):
            return self.getTypedRuleContext(python2Parser.ExprListContext,0)


        def getRuleIndex(self):
            return python2Parser.RULE_funccall

        def enterRule(self, listener):
            if hasattr(listener, "enterFunccall"):
                listener.enterFunccall(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunccall"):
                listener.exitFunccall(self)




    def funccall(self):

        localctx = python2Parser.FunccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funccall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(python2Parser.ID)
            self.state = 46
            self.match(python2Parser.OPEN_PR)
            self.state = 48
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << python2Parser.T__6) | (1 << python2Parser.T__7) | (1 << python2Parser.RETURN) | (1 << python2Parser.OPEN_PR) | (1 << python2Parser.ID) | (1 << python2Parser.NUMBER))) != 0):
                self.state = 47
                self.exprList()


            self.state = 50
            self.match(python2Parser.CLOSE_PR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.BodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expand_body(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.Expand_bodyContext)
            else:
                return self.getTypedRuleContext(python2Parser.Expand_bodyContext,i)


        def getRuleIndex(self):
            return python2Parser.RULE_body

        def enterRule(self, listener):
            if hasattr(listener, "enterBody"):
                listener.enterBody(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBody"):
                listener.exitBody(self)




    def body(self):

        localctx = python2Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.expand_body() 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expand_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.Expand_bodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(python2Parser.VardecContext,0)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(python2Parser.ExprContext,i)


        def COLON(self, i=None):
            if i is None:
                return self.getTokens(python2Parser.COLON)
            else:
                return self.getToken(python2Parser.COLON, i)

        def funccall(self):
            return self.getTypedRuleContext(python2Parser.FunccallContext,0)


        def RETURN(self):
            return self.getToken(python2Parser.RETURN, 0)

        def getRuleIndex(self):
            return python2Parser.RULE_expand_body

        def enterRule(self, listener):
            if hasattr(listener, "enterExpand_body"):
                listener.enterExpand_body(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpand_body"):
                listener.exitExpand_body(self)




    def expand_body(self):

        localctx = python2Parser.Expand_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expand_body)
        try:
            self.state = 74
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.vardec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(python2Parser.T__1)
                self.state = 60
                self.expr(0)
                self.state = 61
                self.match(python2Parser.COLON)
                self.state = 62
                self.expr(0)
                self.state = 63
                self.match(python2Parser.T__2)
                self.state = 64
                self.match(python2Parser.COLON)
                self.state = 65
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(python2Parser.T__3)
                self.state = 69
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.funccall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.match(python2Parser.RETURN)
                self.state = 73
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.VardecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(python2Parser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(python2Parser.ExprContext,0)


        def getRuleIndex(self):
            return python2Parser.RULE_vardec

        def enterRule(self, listener):
            if hasattr(listener, "enterVardec"):
                listener.enterVardec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVardec"):
                listener.exitVardec(self)




    def vardec(self):

        localctx = python2Parser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(python2Parser.ID)
            self.state = 79
            _la = self._input.LA(1)
            if _la==python2Parser.T__3:
                self.state = 77
                self.match(python2Parser.T__3)
                self.state = 78
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(python2Parser.ID, 0)

        def OPEN_PR(self):
            return self.getToken(python2Parser.OPEN_PR, 0)

        def CLOSE_PR(self):
            return self.getToken(python2Parser.CLOSE_PR, 0)

        def exprList(self):
            return self.getTypedRuleContext(python2Parser.ExprListContext,0)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(python2Parser.ExprContext,i)


        def NUMBER(self):
            return self.getToken(python2Parser.NUMBER, 0)

        def RETURN(self):
            return self.getToken(python2Parser.RETURN, 0)

        def getRuleIndex(self):
            return python2Parser.RULE_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = python2Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 82
                self.match(python2Parser.ID)
                self.state = 83
                self.match(python2Parser.OPEN_PR)
                self.state = 85
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << python2Parser.T__6) | (1 << python2Parser.T__7) | (1 << python2Parser.RETURN) | (1 << python2Parser.OPEN_PR) | (1 << python2Parser.ID) | (1 << python2Parser.NUMBER))) != 0):
                    self.state = 84
                    self.exprList()


                self.state = 87
                self.match(python2Parser.CLOSE_PR)
                pass

            elif la_ == 2:
                self.state = 88
                self.match(python2Parser.T__6)
                self.state = 89
                self.expr(13)
                pass

            elif la_ == 3:
                self.state = 90
                self.match(python2Parser.T__7)
                self.state = 91
                self.expr(12)
                pass

            elif la_ == 4:
                self.state = 92
                self.match(python2Parser.ID)
                pass

            elif la_ == 5:
                self.state = 93
                self.match(python2Parser.NUMBER)
                pass

            elif la_ == 6:
                self.state = 94
                self.match(python2Parser.OPEN_PR)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(python2Parser.CLOSE_PR)
                pass

            elif la_ == 7:
                self.state = 98
                self.match(python2Parser.RETURN)
                self.state = 99
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 128
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 102
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 103
                        self.match(python2Parser.T__8)
                        self.state = 104
                        self.expr(12)
                        pass

                    elif la_ == 2:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 105
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 106
                        self.match(python2Parser.T__9)
                        self.state = 107
                        self.expr(11)
                        pass

                    elif la_ == 3:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 108
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 109
                        self.match(python2Parser.T__10)
                        self.state = 110
                        self.expr(10)
                        pass

                    elif la_ == 4:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 112
                        self.match(python2Parser.T__11)
                        self.state = 113
                        self.expr(9)
                        pass

                    elif la_ == 5:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 114
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 115
                        self.match(python2Parser.T__12)
                        self.state = 116
                        self.expr(8)
                        pass

                    elif la_ == 6:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 117
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 118
                        _la = self._input.LA(1)
                        if not(_la==python2Parser.T__6 or _la==python2Parser.T__13):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 119
                        self.expr(7)
                        pass

                    elif la_ == 7:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 121
                        self.match(python2Parser.T__14)
                        self.state = 122
                        self.expr(6)
                        pass

                    elif la_ == 8:
                        localctx = python2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 124
                        self.match(python2Parser.T__4)
                        self.state = 125
                        self.expr(0)
                        self.state = 126
                        self.match(python2Parser.T__5)
                        pass

             
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(python2Parser.ExprListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(python2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(python2Parser.ExprContext,i)


        def getRuleIndex(self):
            return python2Parser.RULE_exprList

        def enterRule(self, listener):
            if hasattr(listener, "enterExprList"):
                listener.enterExprList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExprList"):
                listener.exitExprList(self)




    def exprList(self):

        localctx = python2Parser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.expr(0)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==python2Parser.T__0:
                self.state = 134
                self.match(python2Parser.T__0)
                self.state = 135
                self.expr(0)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 14)
         




